--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -145,3 +145,48 @@ nav
   color: #FFFFFF
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
   // Способы поднятия шапки  1. позиционировать   2.Трансформировать(поднять)из минуса,остается полоса внизу блока
+
+.capability
+  margin: 18px 0 67px 0
+
+.capability_descr
+  display: block
+  padding: 2px 1px
+  margin: 0 auto
+  width: 113px
+  font-weight: 400
+  font-size: 11px
+  text-align: center
+  text-transform: uppercase
+  color: #FFFFFF
+  mix-blend-mode: normal
+  background: #000000
+
+.capability_header
+  margin-top: 32px
+  font-weight: 700
+  font-size: 38px
+  text-align: center
+  text-transform: uppercase
+  color: #222222
+
+.capability_title
+  margin-top: 16px
+  font-weight: 400
+  font-size: 17px
+  color: #1EACC7
+
+.capability_info
+  margin-top: 5px
+  font-weight: 400
+  font-size: 17px
+  line-height: 21px
+  color: #202020
+
+.capability_icon
+  max-width: 100%
+  ::before
+    width: 116px
+    height: 116px
+    background: #1EACC7
+    border-radius: 20px;
