--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -164,6 +164,7 @@ nav
 
 .capability_header
   margin-top: 32px
+  margin-bottom: 16px
   font-weight: 700
   font-size: 38px
   text-align: center
@@ -183,24 +184,47 @@ nav
   line-height: 21px
   color: #202020
 
-
-.fa-key
-  background: url(../../src/icon/key.png) center center/cover no-repeat
-
-.fa
-  position: relative
+.capability_block
   display: flex
   justify-content: center
-  width: 54px
-  height: 78px
-  margin: 0 пш49px
-  &::after
-    content: ""
-    position: absolute
-    width: 116px
-    height: 116px
-    background: #1EACC7
-    border-radius: 60px
-    z-index: -5
-    bottom: -20px
+  text-align: left
+  margin-bottom: 27px
 
+.capability_img
+  display: flex
+  align-items: center
+
+
+.fa
+  margin-top: 27px
+  margin: 0 49px
+  background-position: center
+  background-repeat: no-repeat
+  background-color: #1EACC7
+  width: 116px
+  height: 116px
+  border-radius: 60px
+
+.fa-key
+  background-image: url(../../src/icon/key.png)
+
+.fa-car
+  background-image: url(../../src/icon/car.png)
+
+.fa-day
+  background-image: url(../../src/icon/day.png)
+
+.fa-map
+  background-image: url(../../src/icon/map.png)
+
+.fa-money
+  background-image: url(../../src/icon/money.png)
+
+.fa-phone
+  background-image: url(../../src/icon/phone.png)
+
+.fa-purse
+  background-image: url(../../src/icon/purse.png)
+
+.fa-timeline
+  background-image: url(../../src/icon/timeline.png)
