--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -29,6 +29,12 @@
   text-align: center
   color: #222222
 
+.blue
+  color: #1EACC7
+
+.pink
+  color: #ff5656
+
 
 
 
@@ -310,3 +316,27 @@ nav
       cursor: pointer
       img
         // width: 100%
+
+.choice
+  position: relative
+  min-height: 898px
+  padding: 48px 0 142px 0
+  background-image: url(../../src/img/car.png),url(../../src/img/mobile_bg.jpg)
+  background-position: center 60%, 50% 502px
+  background-repeat: no-repeat,no-repeat
+  background-size: auto, cover
+  background-color: #000
+  .label
+    color: #070716
+    background: #FFFFFF
+  .title
+    color: #fff
+  .subtitle
+    color: #fff
+    padding-bottom: 540px
+  &_text
+    font-weight: 300
+    font-size: 17px
+    line-height: 24px
+    text-align: center
+    color: #222222
