--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,6 +1,14 @@
 @import 'reset.sass'
 @import 'fonts.sass'
 
+
+=btn_hover
+  &:hover
+    background-image: none
+    background-color: $color_blue
+
+
+
 .label
   margin: 0 auto
   height: 24px
@@ -29,11 +37,9 @@
   text-align: center
   color: #222222
 
-.blue
-  color: #1EACC7
+$color_blue: #1EACC7
 
-.pink
-  color: #ff5656
+$color_pink: #ff5656
 
 
 
@@ -73,8 +79,11 @@ nav
 .menu .menu_item
   border-right: 2px dotted black
   padding-right: 28px
+  a
+    text-decoration: none
 .menu .menu_item:last-child
   border-right: 0px
+
 
 .subheader
   height: 87px
@@ -118,6 +127,7 @@ nav
   line-height: 15px
   text-transform: uppercase
   color: #FFFFFF
+  text-decoration: none
 
 .subheader .subheader_btn
   margin-top: 19px
@@ -134,6 +144,8 @@ nav
   text-align: center
   text-transform: uppercase
   color: #FFFFFF
+  +btn_hover
+
 
 .promo
   // transform: translateY(-84px)
@@ -183,6 +195,7 @@ nav
   color: #FFFFFF
   text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
   // Способы поднятия шапки  1. позиционировать   2.Трансформировать(поднять)из минуса,остается полоса внизу блока
+  +btn_hover
 
 .capability
   margin: 18px 0 67px 0
@@ -314,6 +327,27 @@ nav
       border-radius: 100%
       // padding: 6px
       cursor: pointer
+      &:before
+        content: ''
+        display: block
+        width: 14px
+        height: 2px
+        background-color: $color_blue
+        transition: 0.3s all
+      &:after
+        content: ''
+        position: absolute
+        left: 50%
+        transform: translateX(-50%)
+        display: block
+        width: 2px
+        height: 14px
+        background-color: $color_blue
+        transition: 0.3s all
+      &:hover
+        &:before, &:after
+          background-color: $color_pink
+
       img
         // width: 100%
 
