--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -423,4 +423,21 @@ nav
       li
         &:before
           background: url(../../src/icon/check_red.svg) center (center/cover) no-repeat
-
+.map
+  position: relative
+  padding-top: 42px
+  background: url(../../src/img/world_bg.jpg) center (center/contain) no-repeat
+  background-color: #080816
+  min-height: 720px
+  .label
+    background: #FFFFFF
+    color: #070716
+  .title, .subtitle
+    color: #FFFFFF
+  .map_ref
+    position: absolute
+    font-weight: 400
+    font-size: 15px
+    text-align: center
+    text-transform: uppercase
+    color: #1FBAD6
