--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -453,58 +453,77 @@ nav
         &:hover
           color: $color_blue
 footer
-  display: flex
-  justify-content: space-between
-  padding: 53px 23px 40px 23px
-  min-height: 134px
-.footer_icon
-  min-width: 139px
-  display: flex
-  justify-content: space-between
-  & .fa_messenger
-    width: 20px
-    height: 20px
-    padding-right: 20px
-  .footer_content
-    position: relative
-    min-width: 390px
-    &:before
-      content: ""
-      position: absolute
-      top: -42px
-      left: 37px
-      width: 300px
-      border-bottom: 7px solid #1FBAD6
-    .footer_menu
+  padding: 14px 23px 39px 23px
+.footer
+  &_divider
+    width: 299px
+    height: 4px
+    background-color: #1fbad6
+    margin: 0 auto
+  &_wrapper
+    display: flex
+    justify-content: space-between
+    align-items: flex-start
+    padding-top: 32px
+  &_wrapper >div
+    width: 33%
+    &:nth-child(3)
       display: flex
-      justify-content: space-between
-      padding-bottom: 17px
-      & a
-        font-weight: 300
-        font-size: 15px
-        text-transform: uppercase
-        text-decoration: none
-        color: #070716
-        &:hover
-          color: $color_pink
-    .footer_info
-      display: flex
-      justify-content: space-between
-      padding-bottom: 17px
-      & a
-        font-weight: 300
-        font-size: 11px
-        text-transform: uppercase
-        text-decoration: none
-        color: #999999
-        &:hover
-          color: $color_blue
-    & a
-      margin: 0 auto
+      justify-content: flex-end
+  &_social
+    width: 160px
+    display: flex
+    justify-content: space-between
+    &_item
       display: flex
       justify-content: center
-      font-weight: 400
-      font-size: 11px
+      align-items: center
+      margin: 0 4px
+      width: 32px
+      height: 32px
+      background-color: #070716
+      border-radius: 100%
       text-decoration: none
+      &:hover
+        background-color: $color_blue
+      i
+        color: #fff
+  &_links
+    width: 390px
+    margin: 0 auto
+    &_main
+      display: flex
+      justify-content: space-between
+      padding: 0 10px
+      a
+        color: #070716
+        font-size: 15px
+        font-weight: 300
+        text-transform: uppercase
+        text-decoration: none
+        &:hover
+          color: $color_pink
+    &_sub
+      display: flex
+      justify-content: space-between
+      margin-top: 10px
+      a
+        color: #999999
+        font-size: 11px
+        font-weight: 300
+        text-transform: uppercase
+        text-decoration: none
+        &:hover
+          color: $color_blue
+    &_lang
+      display: block
+      margin: 0 auto
+      color: #1fbad6
+      font-size: 11px
+      font-weight: 400
+      margin-top: 19px
       text-transform: uppercase
-      color: #1FBAD6
+      text-align: center
+      text-decoration: none
+      &:hover
+        color: $color_pink
