mobile1200px(991px)

--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -26,11 +26,6 @@
   text-align: center
   color: #222222
 
-
-
-
-
-
 body
   font-family: 'Roboto'
 
@@ -70,8 +65,6 @@ nav
     align-items: center
     color: #FFFFFF
 
-
-
 .subheader
   height: 87px
   // background: #000000    если оставить так,то все элементы будут прозрачны
@@ -82,57 +75,49 @@ nav
   // position: relative    трансформация
   background: rgba(0,0,0, .6)
   mix-blend-mode: normal
-
-.subheader .subheader_logo
-  // Если в дальнейшем лого будет меняться,больше-меньше,то max-width даст лого место в 100%ширины колонки
-  display: block
-  max-width: 100%
-  margin-top: 16px
-
-.subheader .subheader_official
-  margin-top: 6px
-  font-weight: 100
-  font-size: 13px
-  display: flex
-  align-items: center
-  color: #FFFFFF
-  opacity: 0.5
-
-.subheader .subheader_call
-  margin-top: 19px
-  font-weight: 300
-  font-size: 12px
-  text-align: right
-  color: #FFFFFF
-
-.subheader .subheader_phone
-  display: block
-  margin-top: 8px
-  font-weight: 400
-  font-size: 22px
-  text-align: right
-  line-height: 15px
-  text-transform: uppercase
-  color: #FFFFFF
-  text-decoration: none
-
-.subheader .subheader_btn
-  margin-top: 19px
-  width: 172px
-  height: 46px
-  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
-  background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
-  box-shadow: inset 0px -3px 0px rgba(0, 0, 0, 0.12)
-  border: none
-  border-radius: 4px
-  font-weight: 400
-  font-size: 14px
-  line-height: 46px
-  text-align: center
-  text-transform: uppercase
-  color: #FFFFFF
-  +btn_hover
-
+  &_logo
+    // Если в дальнейшем лого будет меняться,больше-меньше,то max-width даст лого место в 100%ширины колонки
+    display: block
+    max-width: 100%
+    margin-top: 16px
+  &_official
+    margin-top: 6px
+    font-weight: 100
+    font-size: 13px
+    display: flex
+    align-items: center
+    color: #FFFFFF
+    opacity: 0.5
+  &_call
+    margin-top: 19px
+    font-weight: 300
+    font-size: 12px
+    text-align: right
+    color: #FFFFFF
+  &_phone
+    display: block
+    margin-top: 8px
+    font-weight: 400
+    font-size: 22px
+    text-align: right
+    line-height: 15px
+    text-transform: uppercase
+    color: #FFFFFF
+    text-decoration: none
+  &_btn
+    margin-top: 19px
+    width: 172px
+    height: 46px
+    box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
+    border: none
+    border-radius: 4px
+    background-image: linear-gradient(to top, $main-color 0%, #4ce2ff 100%)
+    text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
+    color: #ffffff
+    font-size: 14px
+    font-weight: 400
+    text-transform: uppercase
+    +btn_hover
 
 .promo
   // transform: translateY(-84px)
@@ -183,52 +168,81 @@ nav
   // Способы поднятия шапки  1. позиционировать   2.Трансформировать(поднять)из минуса,остается полоса внизу блока
   +btn_hover
 
-.capability
-  margin: 18px 0 67px 0
+.reasons
+  padding: 71px 0 65px 0
 
-.capability_label
-  // display: block
-  // padding: 2px 1px
-  // margin: 0 auto
-  // width: 113px
-  // font-weight: 400
-  // font-size: 11px
-  // text-align: center
-  // mix-blend-mode: normal
-  // background: #000000
+.label
+  position: relative
+  margin: 0 auto
+  height: 24px
+  width: 112px
+  padding: 5px 12px
+  background-color: #000000
+  color: #ffffff
+  font-size: 11px
+  font-weight: 300
+  text-transform: uppercase
+  text-align: center
+  z-index: 2
+  &_white
+    background-color: #fff
+    color: #000
+  &_min
+    width: 76px
 
-.capability_header
-  // margin-top: 32px
-  // margin-bottom: 16px
-  // font-weight: 700
-  // font-size: 38px
-  // text-align: center
-  // text-transform: uppercase
-  // color: #222222
+.title
+  position: relative
+  margin-bottom: 0
+  margin-top: 38px
+  color: #222222
+  font-size: 38px
+  line-height: 38px
+  font-weight: 700
+  text-transform: uppercase
+  text-align: center
+  z-index: 2
+  &_white
+    color: #fff
 
-.capability_title
-  margin-top: 16px
-  font-weight: 400
+.subtitle
+  position: relative
+  margin-top: 19px
+  color: #222222
   font-size: 17px
-  color: #1EACC7
-
-.capability_info
-  margin-top: 5px
   font-weight: 400
-  font-size: 17px
-  line-height: 21px
-  color: #202020
+  text-align: center
+  z-index: 2
+  &_white
+    color: #fff
 
-.capability_block
-  display: flex
-  justify-content: center
-  text-align: left
-  margin-bottom: 27px
-
-.capability_img
-  display: flex
-  align-items: center
-
+.reasons
+  padding: 71px 0 65px 0
+  &_block
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-top: 35px
+  &_round
+    display: flex
+    justify-content: center
+    align-items: center
+    margin-right: 26px
+    width: 113px
+    height: 113px
+    background-color: $color_blue
+    border-radius: 100%
+  &_descr
+    width: 343px
+  &_subtitle
+    line-height: 21px
+    color: $color_blue
+    font-size: 17px
+    font-weight: 400
+  &_text
+    color: #202020
+    font-size: 15px
+    font-weight: 300
+    line-height: 21px
 
 .far
   margin-top: 27px
@@ -263,7 +277,6 @@ nav
 
 .far-timeline
   background-image: url(../../src/icon/timeline.png)
-
 
 // Sass
 
@@ -428,16 +441,16 @@ nav
       .title, .subtitle
         color: #FFFFFF
     .map_ref
-        flex: 0 0 auto
-        font-weight: 400
-        font-size: 15px
-        text-align: center
-        text-transform: uppercase
-        color: #1FBAD6
-        padding-bottom: 50px
-        text-decoration: none
-        &:hover
-          color: $color_blue
+      flex: 0 0 auto
+      font-weight: 400
+      font-size: 15px
+      text-align: center
+      text-transform: uppercase
+      color: #1FBAD6
+      padding-bottom: 50px
+      text-decoration: none
+      &:hover
+        color: $color_blue
 footer
   padding: 14px 23px 39px 23px
 .footer
