--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -31,10 +31,14 @@ body
 
 header
   position: relative
+  height: 50px
 
 nav
+  position: fixed
+  width: 100%
   height: 50px
-  background: #212121
+  background-color: #212121
+  z-index: 5
 
 // header nav
 //   padding: 10px 70px  или
@@ -43,33 +47,29 @@ nav
   justify-content: space-between
   padding: 13px 70px
   margin: 0
-  list-style: none
-
-// .menu_item
-//   line-height: 59px      или
-// .menu
-//   padding: 11px 70px
-
-.menu
-  &_item
-    border-right: 2px dotted black
-    padding-right: 28px
-    &:last-child
-      border-right: none
-    a
-      text-decoration: none
+  list-style-type: none
   &_link
-    font-weight: 300
+    color: #ffffff
     font-size: 15px
-    display: flex
-    align-items: center
-    color: #FFFFFF
+    font-weight: 300
+    text-decoration: none
+    &:hover
+      text-decoration: none
+      color: $color_blue
+    &_item
+      border-right: 2px dotted black
+      padding-right: 28px
+
+.hamburger
+  display: none
 
 .subheader
   height: 87px
   // background: #000000    если оставить так,то все элементы будут прозрачны
   // opacity: 0.6
   position: absolute
+  top: 50px
+  height: 84px
   width: 100%
   // z-index: 2
   // position: relative    трансформация
@@ -111,7 +111,7 @@ nav
     box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.12)
     border: none
     border-radius: 4px
-    background-image: linear-gradient(to top, $main-color 0%, #4ce2ff 100%)
+    background-image: linear-gradient(to top, $color_blue 0%, #4ce2ff 100%)
     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.21)
     color: #ffffff
     font-size: 14px
@@ -134,39 +134,39 @@ nav
     text-transform: uppercase
     color: #FFFFFF
 
-.promo .promo_subheader
-  margin: 0
-  margin-top: 22px
-  font-weight: 700
-  font-size: 36px
-  line-height: 36px
-  text-align: center
-  text-transform: uppercase
-  color: #FFFFFF
+  &_subheader
+    margin: 0
+    margin-top: 22px
+    font-weight: 700
+    font-size: 36px
+    line-height: 36px
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
 
-.promo .promo_descr
-  margin-top: 23px
-  font-weight: 400
-  font-size: 18px
-  line-height: 24px
-  text-align: center
-  color: #FFFFFF
+  &_descr
+    margin-top: 23px
+    font-weight: 400
+    font-size: 18px
+    line-height: 24px
+    text-align: center
+    color: #FFFFFF
 
-.promo .promo_btn
-  display: block
-  margin: 118px auto 0 auto
-  width: 259px
-  height: 63px
-  background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
-  box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12)
-  border: none
-  border-radius: 4px
-  text-align: center
-  text-transform: uppercase
-  color: #FFFFFF
-  text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
-  // Способы поднятия шапки  1. позиционировать   2.Трансформировать(поднять)из минуса,остается полоса внизу блока
-  +btn_hover
+  &_btn
+    display: block
+    margin: 118px auto 0 auto
+    width: 259px
+    height: 63px
+    background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%)
+    box-shadow: inset 0px -4px 0px rgba(0, 0, 0, 0.12)
+    border: none
+    border-radius: 4px
+    text-align: center
+    text-transform: uppercase
+    color: #FFFFFF
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.21)
+    // Способы поднятия шапки  1. позиционировать   2.Трансформировать(поднять)из минуса,остается полоса внизу блока
+    +btn_hover
 
 .reasons
   padding: 71px 0 65px 0
