--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -99,3 +99,28 @@
         &:nth-child(3)
           transform: translateY(3px) rotate(45deg)
 
+  .xs-hidden
+    display: none
+  .xs-visible
+    display: block
+
+  .subheader
+    &_phone
+      display: block
+      margin-top: 10px
+      font-weight: 400
+      font-size: 16px
+      text-transform: uppercase
+      text-align: center
+      color: #FFFFFF
+    &_btn
+      display: block
+      width: 200px
+      height: 40px
+      margin: 0 auto
+      margin-top: 10px
+
+  .promo
+    &_header
+      line-height: 45px
+
