--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -26,6 +26,7 @@
   text-align: center
   color: #222222
 
+
 body
   font-family: 'Roboto'
 
@@ -526,3 +527,7 @@ footer
       text-decoration: none
       &:hover
         color: $color_pink
+
+
+.xs-visible
+  display: none
