--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -48,6 +48,8 @@
     &_block
       flex-direction: column
       align-items: center
+    &_round
+      margin-right: 0
     &_descr
       margin-top: 20px
       width: 300px
@@ -124,3 +126,56 @@
     &_header
       line-height: 45px
 
+@media (max-width: 575px)
+  .subheader
+    height: 60px
+    &_official
+      display: none
+    &_logo
+      margin-top: 16px
+    &_phone
+      font-size: 12px
+      margin-top: 11px
+    &_btn
+      width: 110px
+      height: 22px
+      font-size: 10px
+      margin-top: 6px
+
+  .promo
+    min-height: 400px
+    padding: 93px 0 35px 0
+    &_descr
+      display: none
+    &_header
+      font-size: 30px
+      padding: 0 24px
+      line-height: 35px
+    &_subheader
+      font-size: 20px
+      margin-top: 33px
+      padding: 0 10px
+      line-height: 30px
+    &_btn
+      width: 210px
+      height: 50px
+      margin-top: 72px
+
+  .menu
+    width: 85%
+
+  .reasons
+    padding: 22px 0 36px 0
+    &_block
+      margin-top: 26px
+    &_round
+      width: 100px
+      height: 100px
+    &_descr
+      width: 100%
+      margin-top: 27px
+
+  .title
+    font-size: 16px
+    margin-top: 15px
+    line-height: 16px
