--- a/src/sass/_general.sass
+++ b/src/sass/_general.sass
@@ -26,7 +26,6 @@
   text-align: center
   color: #222222
 
-
 body
   font-family: 'Roboto'
 
@@ -353,27 +352,28 @@ nav
 
 .choice
   position: relative
-  min-height: 898px
-  padding: 48px 0 142px 0
-  background-image: url(../../src/img/car.png),url(../../src/img/mobile_bg.jpg)
-  background-position: center 60%, 50% 502px
-  background-repeat: no-repeat,no-repeat
-  background-size: auto, cover
-  background-color: #000
-  .label
-    color: #070716
-    background: #FFFFFF
-  .title
-    color: #fff
-  .subtitle
-    color: #fff
-    padding-bottom: 540px
-  &_text
-    font-weight: 300
-    font-size: 17px
-    line-height: 24px
+  min-height: 895px
+  padding: 57px 0 138px 0
+  background: url('../../src/img/mobile_bg.jpg') center (center / cover) no-repeat
+  &_img
+    position: relative
+    display: block
+    margin: 56px auto 0 auto
+    z-index: 2
+  &_descr
     text-align: center
     color: #222222
+    font-size: 17px
+    font-weight: 300
+    line-height: 24px
+  .black
+    position: absolute
+    top: 0
+    left: 0
+    height: 499px
+    width: 100%
+    background-color: #070716
+    z-index: 1
 
 .require
   padding: 68px 0 84px 0
@@ -527,6 +527,12 @@ footer
       text-decoration: none
       &:hover
         color: $color_pink
+  &_mobile
+    a
+    &_img
+      width: 94.5px
+      height: 27px
+
 
 
 .xs-visible
